--- a/package.json
+++ b/package.json
@@ -252,6 +252,8 @@
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
+    "node-disk-info": "^1.3.0",
+    "parse-torrent-title": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.4",
