--- a/package.json
+++ b/package.json
@@ -253,6 +253,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
+    "fs-extra": "^10.0.0",
     "history": "^5.0.0",
     "parse-torrent-title": "^1.3.0",
     "react": "^17.0.1",
